i think I got it

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     </div><!--End buttons-->
                   </div><!--End cert-contant-text-in-->
                   <div class="cert-content-panel1"><!--Start cert-content-panel-->
-                     <p>Certification type</p>  
+                     <p>Certification Type.</p>  
                   </div><!--End cert-content-panel1-->
                 </div><!--End cert-content-box-in-->
                 <div class="cert-content-box-bottom"><!--Start cert-content-box-bottom-->
@@ -274,48 +274,48 @@
                     <div class="cert-slides"><!--Start cert-slides-->
                     <div class="mySlides fade">
                       <h2>Certifications from Codecademy</p>
-                      <img src="./resources/images/LCLine.png" style="width:80%">
+                      <img src="./resources/images/LCLine.png">
                   </div>
                   <div class="mySlides fade">
                     <h2>Certifications from Codecademy</p>
-                    <img src="./resources/images/LCSS.png" style="width:80%">
+                    <img src="./resources/images/LCSS.png">
                   </div>
                   <div class="mySlides fade">
                     <h2>Certifications from Codecademy</p>
-                    <img src="./resources/images/LCSSInter.png" style="width:80%">
+                    <img src="./resources/images/LCSSInter.png" >
                   </div>
                   <div class="mySlides fade">
                     <h2>Certifications from Codecademy</p>
-                    <img src="./resources/images/LHTML.png" style="width:80%">
+                    <img src="./resources/images/LHTML.png" >
                   </div>
                   <div class="mySlides fade">
                     <h2>Certifications from Codecademy</p>
-                    <img src="./resources/images/LJS.png" style="width:80%">
+                    <img src="./resources/images/LJS.png" >
                   </div>
                   <div class="mySlides fade">
                     <h2>Certifications from Codecademy</p>
-                    <img src="./resources/images/LP3.png" style="width:80%">
+                    <img src="./resources/images/LP3.png" >
                   </div>
                   <div class="mySlides fade">
                     <h2>Certifications from Codecademy</p>
-                    <img src="./resources/images/Web.jpg" style="width:80%">
+                    <img src="./resources/images/Web.jpg">
                   </div>
                   <div class="mySlides1 fade">
                     <h2>Certifications for Non-destructive Testing</p>
-                    <img src="./resources/images/PTLVL2.jpeg" style="width:45%">
+                    <img src="./resources/images/PTLVL2.jpeg">
                   </div>
                   <div class="mySlides1 fade">
                     <h2>Certifications for Non-destructive Testing</p>
-                    <img src="./resources/images/VTLVL2.jpeg" style="width:45%">
+                    <img src="./resources/images/VTLVL2.jpeg">
                  </div>
                  <div class="mySlides2 fade">
                   <h2>Certifications for Non-destructive Testing</p>
-                  <img src="./resources/images/Boilermaker.jpeg" style="width:45%">
+                  <img src="./resources/images/Boilermaker.jpeg">
                 </div>
               </div><!--End cert-slides-->
                   </div><!--End cert-contant-text-bottom-->
                   <div class="cert-content-panel2"><!--Start cert-content-panel-->
-                     <p>Certification image</p>  
+                     <p>Certification Image</p>  
                   </div><!--End cert-content-panel2-->
                 </div><!--End cert-content-box-bottom--> 
              </div><!--End cert-content-inside--> 
@@ -364,115 +364,115 @@
                     <div class="port-slides"><!--Start port-slides-->
                       <div class="mySlides3 fade">
                         <div class="text">X-Wing Assault</div>
-                        <img src="./resources/images/SM.png" style="width:47%">
+                        <img src="./resources/images/SM.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">X-Wing Assault code</div>
-                        <img src="./resources/images/SM0.png" style="width:47%">
+                        <img src="./resources/images/SM0.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">X-Wing Assault start screen</div> 
-                        <img src="./resources/images/SM1.png" style="width:47%">
+                        <img src="./resources/images/SM1.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">X-Wing Assault play screen</div>
-                        <img src="./resources/images/SM2.png" style="width:47%">
+                        <img src="./resources/images/SM2.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">X-Wing Assault end screen</div>
-                        <img src="./resources/images/SM3.png" style="width:47%">
+                        <img src="./resources/images/SM3.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Key Hunter</div>
-                        <img src="./resources/images/KH.png" style="width:47%">
+                        <img src="./resources/images/KH.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Key Hunter code part 1</div>
-                        <img src="./resources/images/Key1.png" style="width:47%">
+                        <img src="./resources/images/Key1.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Key Hunter Code part 2</div>
-                        <img src="./resources/images/Key2.png" style="width:47%">
+                        <img src="./resources/images/Key2.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Key Hunter game play</div>
-                        <img src="./resources/images/Key3.png" style="width:47%">
+                        <img src="./resources/images/Key3.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Porsche 928 Workshop Manual</div>
-                        <img src="./resources/images/928.png" style="width:47%">
+                        <img src="./resources/images/928.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Workshop Manual Code</div>
-                        <img src="./resources/images/WSM0.png" style="width:47%">
+                        <img src="./resources/images/WSM0.png">
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Workshop Manual Landing Page</div>
-                        <img src="./resources/images/WSM1.png" style="width:47%">
+                        <img src="./resources/images/WSM1.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Workshop Manual Content View</div>
-                        <img src="./resources/images/WSM3.png" style="width:47%">
+                        <img src="./resources/images/WSM3.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Stupid Ways</div>
-                        <img src="./resources/images/SW.png" style="width:47%">
+                        <img src="./resources/images/SW.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Stupid Ways code part 1</div>
-                        <img src="./resources/images/SW1.png" style="width:47%">
+                        <img src="./resources/images/SW1.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Stupid Ways code part 2</div>
-                        <img src="./resources/images/SW2.png" style="width:47%">
+                        <img src="./resources/images/SW2.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Stupid Ways landing game play</div>
-                        <img src="./resources/images/SW3.png" style="width:47%">
+                        <img src="./resources/images/SW3.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Stupid Ways game play part 2</div>
-                        <img src="./resources/images/SW4.png" style="width:47%">
+                        <img src="./resources/images/SW4.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Evesunflower.com</div>
-                        <img src="./resources/images/ESF.png" style="width:47%">
+                        <img src="./resources/images/ESF.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Evesunflower.com code</div>
-                        <img src="./resources/images/ESF1.png" style="width:47%">
+                        <img src="./resources/images/ESF1.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Evesunflower.com Events page</div>
-                        <img src="./resources/images/ESF2.png" style="width:47%">
+                        <img src="./resources/images/ESF2.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Evesunflower.com About page</div>
-                        <img src="./resources/images/ESF3.png" style="width:47%">
+                        <img src="./resources/images/ESF3.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Evesunflower.com Landing page</div>
-                        <img src="./resources/images/ESF4.png" style="width:47%">
+                        <img src="./resources/images/ESF4.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Erica & District Historical Society</div>
-                        <img src="./resources/images/ED.png" style="width:47%">
+                        <img src="./resources/images/ED.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Erica & District Historical Society Landing page</div>
-                        <img src="./resources/images/EDHS1.png" style="width:47%">
+                        <img src="./resources/images/EDHS1.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Erica & District Historical Society About page</div>
-                        <img src="./resources/images/EDHS2.png" style="width:47%">
+                        <img src="./resources/images/EDHS2.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Erica & District Historical Society Code</div>
-                        <img src="./resources/images/EDHS3.png" style="width:47%">
+                        <img src="./resources/images/EDHS3.png" >
                       </div>
                       <div class="mySlides3 fade">
                         <div class="text">Erica & District Historical Society Newsletter page</div>
-                        <img src="./resources/images/EDHS4.png" style="width:47%">
+                        <img src="./resources/images/EDHS4.png" >
                       </div>
               </div><!--End port-slides-->
                   </div><!--End port-contant-text-bottom-->
