I think im done now

--- a/index.html
+++ b/index.html
@@ -353,7 +353,8 @@
                   <div class="port-content-text-in"><!--Start port-content-text-in-->
                     <p>The following slides are from the programs I have developed since I began my coding journey. They range from <em> the Swift code</em> to 
                     <em>Python3 code</em> and three <em>Websites</em> I developed (including this one) using HTML, CSS and JS. One I made for my Wife (She is a florist) <a href="https://evesunflower.com"><em>evesunflower.com</em></a> and a second one that is still in 
-                     Production for the <em>Erica and District Historical Society, in Australia</em> if they like it. </p>
+                     Production for the <a href="./history.html"><em>Erica and District Historical Society, in Australia, </em></a> if they like it. </p>
+                     
                   </div><!--End port-contant-text-in-->
                   <div class="port-content-panel1"><!--Start port-content-panel-->
                      <p>Portfolio 2022</p>  
@@ -517,7 +518,7 @@
                  <p>After playing around with Swift and Xcode, this last year I decided to take it further with the coding and I enrolled in an online training program called <a href="http://www.codecademy.com"><em>Codecademy</em></a>. I began by
                    learning the Python language and how to use the Command Line to help utilize the language. </p>
                  <p>Once I had finished the Python3 certification, I began to look into what other courses were available. I found one that would send me down the path I'm on now. Front End Engineer. Within this career path I have now achieved certifications in HTML, Basic and Intermediate
-                    CSS and Basic Java Script. </p>   
+                    CSS and Basic Java Script.  </p>   
                 </div>
               </div><!--End contact-about-in-->
             </div><!--End contact-about-->
