fixed portfolio text color and wording

--- a/index.html
+++ b/index.html
@@ -351,9 +351,10 @@
 
                 <div class="port-content-box-in"><!--Start port-content-box-in-->
                   <div class="port-content-text-in"><!--Start port-content-text-in-->
-                    <p>The following slides are from the programs I have developed since I began my coding journey. They range from <em> the Swift code</em> to 
-                    <em>Python3 code</em> and three <em>Websites</em> I developed (including this one) using HTML, CSS and JS. One I made for my Wife (She is a florist) <a href="https://evesunflower.com"><em>evesunflower.com</em></a> and a second one that is still in 
-                     Production for the <a href="./history.html"><em>Erica and District Historical Society, in Australia, </em></a> if they like it. </p>
+                    <p>The following slides are from the programs I have developed since I began my coding journey. They are written in<em> Swift</em> , 
+                    <em>Python3</em> and three websites I developed (including this one) using <em>HTML, CSS and Java Script</em>.</p>
+                    <p><a href="https://evesunflower.com"><em>Evesunflower.com</em></a> , I made for my Wife (She is a florist). The second one, is still in 
+                     development, and once complete will, (with their approval) be live for the <a href="./history.html"><em>Erica and District Historical Society</em></a> based in Australia. </p>
                      
                   </div><!--End port-contant-text-in-->
                   <div class="port-content-panel1"><!--Start port-content-panel-->
