--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="clock-box"><!--Start clock-box-->  
                   <div class="clock">HH : MM</div>
                   <div class="date">DD - MM -YYYY</div>
-                  <script>theClock()</script>
+                  
                 </div><!--End clock-box-->
               </div><!--End landing-content-panel-->
             </div><!--End landing-content-box-->
@@ -84,6 +84,8 @@
         <a id="employment"></a>
         <div class="employment-box-back"><!--Start employment-box-back-->
           <div class="employment-box-front"><!--Start employment-box-front-->
+            <div class="emp-content-box"><!--Start emp-content-box-->
+              <div class="emp-content-inside"><!--Start emp-content-inside--> 
             <div class="banner"><!--Start banner-->
               <button class="employment-back"><a href="#top">Back</a></button>
               <div class="employment-heading"><h3>Employment History</h3></div>
@@ -228,6 +230,12 @@
                 </div><!--End E6-->
               </div><!--End-employment-content-right-->
             </div><!--End employment-content-box-->
+            </div><!--End emp-content-inside-->
+            <div class="emp-content-panel"><!--Start emp-content-panel-->
+              <p>Employment History
+            </div><!--End emp-content-panel-->
+            </div><!--End emp-content-box-->
+            
           </div><!--End employment-box-front-->
         </div><!--End employment-box-back-->
 
@@ -495,6 +503,7 @@
 
         <a id="contact"></a>
         <div class="contact-box"><!--Start contact-box-->
+          <div class="cont-box"><!--Start cont-box-->  
           <div class="contact-box-in"><!--Start contact-box-in-->
             <h1>Contact me</h1>
             <div class="contact-buttons"><!--Start contact-buttons-->
@@ -524,10 +533,15 @@
               </div><!--End contact-about-in-->
             </div><!--End contact-about-->
           </div><!--End contact-box-in-->
+          <div class="cont-box-panel"><!--Start cont-box-panel-->
+            <p>Contact me</p> 
+          </div><!--End cont-box-panel-->
+          </div><!--End cont-box-->
         </div><!--End contact-box-->
 
       </div><!--End page-container-->
     <script src="./index.js"></script>
     <script>portSlides()</script>
+    <script>theClock()</script>
    </body>
  </html>
