adjusted employment buttons

--- a/index.html
+++ b/index.html
@@ -92,17 +92,19 @@
             </div><!--End banner-->
             <div class="employment-content-box"><!--Start employment-content-box-->
               <div class="employment-content-left"><!--Start employment-content-left-->
-                <button onclick="E1()" class="employment-button-box btn"><!--Start landing-button-box-->
+
+                <button onclick="E1() " class="employment-button-box " ><!--Start landing-button-box-->
                   <div class="employment-button-inside">
                     <div class="employment-button-text">
-                    <a>USPS (Rural Carrier Assistant)<span>  Jan 2018 to Current</span></a>
+                    <a>USPS (Rural Carrier Assistant) Jan 2018 to Current</a>
                     </div>
                   </div>
                   <div class="employment-button-panel">
                     <span class="hop">USPS.</span>   
                   </div>
                 </button><!--End landing-button-box-->
-                <button onclick="E2()" class="employment-button-box btn"><!--Start landing-button-box-->
+
+                <button onclick="E2()" class="employment-button-box "><!--Start landing-button-box-->
                   <div class="employment-button-inside">
                     <div class="employment-button-text">
                     <a>Lobbs Horticultural (Horticultural Tech)<span>  Feb 2017 to Jan 2018</span></a>
@@ -112,7 +114,7 @@
                     <span class="hop">Lobbs</span>   
                   </div>
                 </button><!--End landing-button-box-->
-                <button onclick="E3()" class="employment-button-box btn"><!--Start landing-button-box-->
+                <button onclick="E3()" class="employment-button-box "><!--Start landing-button-box-->
                   <div class="employment-button-inside">
                     <div class="employment-button-text">
                     <a>C.M.I. (Dispatch Supervisor)<span>Jan 2015 to Mar 2016</span></a>
@@ -122,7 +124,7 @@
                     <span class="hop">CMI.</span>   
                   </div>
                 </button><!--End landing-button-box-->
-                <button onclick="E4()" class="employment-button-box btn"><!--Start landing-button-box-->
+                <button onclick="E4()" class="employment-button-box "><!--Start landing-button-box-->
                   <div class="employment-button-inside">
                     <div class="employment-button-text">
                     <a>Friction Stir Link (QC Supervisor)<span>Nov 2013 to Jan 2015 then Mar 2016 to Feb 2017</span></a>
@@ -132,7 +134,7 @@
                     <span class="hop">FSL.</span>   
                   </div>
                 </button><!--End landing-button-box-->
-                <button onclick="E5()" class="employment-button-box btn"><!--Start landing-button-box-->
+                <button onclick="E5()" class="employment-button-box "><!--Start landing-button-box-->
                   <div class="employment-button-inside">
                     <div class="employment-button-text">
                     <a>Lowes (Department Supervisor - Garden)<span>Jun 2011 to Nov 2013</span></a>
@@ -142,7 +144,7 @@
                     <span class="hop">Lowes</span>   
                   </div>
                 </button><!--End landing-button-box-->
-                <button onclick="E6()" class="employment-button-box btn"><!--Start landing-button-box-->
+                <button onclick="E6()" class="employment-button-box "><!--Start landing-button-box-->
                   <div class="employment-button-inside">
                     <div class="employment-button-text">
                     <a>Home Depot (Assistant Store Manager)<span>Nov 2004 to Jun 2011</span></a>
@@ -154,7 +156,7 @@
                 </button><!--End landing-button-box-->
               </div><!--End employment-content-left-->
               <div class="employment-content-right"><!--Start employment-content-right-->
-                <div class="E1"> <!--Start E1-->
+                <div class="E1" > <!--Start E1-->
                   <h2>Responsibilities Included :</h2>
                   <ul class="responsibilities">
                     <li>Demonstrated and promoted safe driving methods, consistently adhering to state traffic rules and regulations.</li>
@@ -215,7 +217,7 @@
                     <li>Ensured all associate training was up to date and encouraged growth.</li>
                   </ul>
                 </div><!--End E5-->
-                <div class="E6"><!--Start E6-->
+                <div class="E6" ><!--Start E6-->
                   <h2>Responsibilities Included :</h2>
                   <ul class="responsibilities">
                     <li>Managed all Front End, Back End, Trade and Vault operations</li>
@@ -541,6 +543,7 @@
 
       </div><!--End page-container-->
     <script src="./index.js"></script>
+    
     <script>portSlides()</script>
     <script>theClock()</script>
    </body>
