fixed employment buttons

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
      <title>Terry Baillie</title>
      <link href="./resources/css/index.css" type='text/css' rel="stylesheet">
-    
      <script src="./index.js"></script>     
     </head>
     <body>
@@ -104,59 +103,7 @@
                   </div>
                 </button><!--End landing-button-box-->
 
-                <button onclick="E2()" class="employment-button-box "><!--Start landing-button-box-->
-                  <div class="employment-button-inside">
-                    <div class="employment-button-text">
-                    <a>Lobbs Horticultural (Horticultural Tech)<span>  Feb 2017 to Jan 2018</span></a>
-                    </div>
-                  </div>
-                  <div class="employment-button-panel">
-                    <span class="hop">Lobbs</span>   
-                  </div>
-                </button><!--End landing-button-box-->
-                <button onclick="E3()" class="employment-button-box "><!--Start landing-button-box-->
-                  <div class="employment-button-inside">
-                    <div class="employment-button-text">
-                    <a>C.M.I. (Dispatch Supervisor)<span>Jan 2015 to Mar 2016</span></a>
-                    </div>
-                  </div>
-                  <div class="employment-button-panel">
-                    <span class="hop">CMI.</span>   
-                  </div>
-                </button><!--End landing-button-box-->
-                <button onclick="E4()" class="employment-button-box "><!--Start landing-button-box-->
-                  <div class="employment-button-inside">
-                    <div class="employment-button-text">
-                    <a>Friction Stir Link (QC Supervisor)<span>Nov 2013 to Jan 2015 then Mar 2016 to Feb 2017</span></a>
-                    </div>
-                  </div>
-                  <div class="employment-button-panel">
-                    <span class="hop">FSL.</span>   
-                  </div>
-                </button><!--End landing-button-box-->
-                <button onclick="E5()" class="employment-button-box "><!--Start landing-button-box-->
-                  <div class="employment-button-inside">
-                    <div class="employment-button-text">
-                    <a>Lowes (Department Supervisor - Garden)<span>Jun 2011 to Nov 2013</span></a>
-                    </div>
-                  </div>
-                  <div class="employment-button-panel">
-                    <span class="hop">Lowes</span>   
-                  </div>
-                </button><!--End landing-button-box-->
-                <button onclick="E6()" class="employment-button-box "><!--Start landing-button-box-->
-                  <div class="employment-button-inside">
-                    <div class="employment-button-text">
-                    <a>Home Depot (Assistant Store Manager)<span>Nov 2004 to Jun 2011</span></a>
-                    </div>
-                  </div>
-                  <div class="employment-button-panel">
-                    <span class="hop">THD</span>   
-                  </div>
-                </button><!--End landing-button-box-->
-              </div><!--End employment-content-left-->
-              <div class="employment-content-right"><!--Start employment-content-right-->
-                <div class="E1" > <!--Start E1-->
+                <div id="E1"> <!--Start E1-->
                   <h2>Responsibilities Included :</h2>
                   <ul class="responsibilities">
                     <li>Demonstrated and promoted safe driving methods, consistently adhering to state traffic rules and regulations.</li>
@@ -170,7 +117,19 @@
                     <li>Assisted team members and managers with tasks to maintain productivity and meet project milestones.</li>
                   </ul>
                 </div><!--EndE1-->
-                <div class="E2"><!--Start E2-->
+
+                <button onclick="E2()" class="employment-button-box "><!--Start landing-button-box-->
+                  <div class="employment-button-inside">
+                    <div class="employment-button-text">
+                    <a>Lobbs Horticultural (Horticultural Tech)<span>  Feb 2017 to Jan 2018</span></a>
+                    </div>
+                  </div>
+                  <div class="employment-button-panel">
+                    <span class="hop">Lobbs</span>   
+                  </div>
+                </button><!--End landing-button-box-->
+
+                <div id="E2"><!--Start E2-->
                   <h2>Responsibilities Included :</h2>
                   <ul class="responsibilities">
                     <li>Identified specific plants and developed strong understanding of unique life cycles to provide optimized care.</li>
@@ -180,7 +139,19 @@
                     <li>Supervised locations to eliminate problems such as pests from lawns and gardens, including selecting chemicals, application methods, and schedules.</li>
                   </ul>
                 </div><!--End E2-->
-                <div class="E3"><!--Start E3-->
+
+                <button onclick="E3()" class="employment-button-box "><!--Start landing-button-box-->
+                  <div class="employment-button-inside">
+                    <div class="employment-button-text">
+                    <a>C.M.I. (Dispatch Supervisor)<span>Jan 2015 to Mar 2016</span></a>
+                    </div>
+                  </div>
+                  <div class="employment-button-panel">
+                    <span class="hop">CMI.</span>   
+                  </div>
+                </button><!--End landing-button-box-->
+
+                <div id="E3"><!--Start E3-->
                   <h2>Responsibilities Included :</h2>
                   <ul class="responsibilities">
                     <li>Oversaw the day to day functions of the dispatch office and team.</li>
@@ -191,7 +162,19 @@
                     <li>Used Microsoft Office for all communications of reports, emails and such.</li>
                   </ul>
                 </div><!--End E3-->
-                <div class="E4"><!--Start E4-->
+
+                <button onclick="E4()" class="employment-button-box "><!--Start landing-button-box-->
+                  <div class="employment-button-inside">
+                    <div class="employment-button-text">
+                    <a>Friction Stir Link (QC Supervisor)<span>Nov 2013 to Jan 2015 then Mar 2016 to Feb 2017</span></a>
+                    </div>
+                  </div>
+                  <div class="employment-button-panel">
+                    <span class="hop">FSL.</span>   
+                  </div>
+                </button><!--End landing-button-box-->
+
+                <div id="E4"><!--Start E4-->
                   <h2>Responsibilities Included :</h2>
                   <ul class="responsibilities">
                     <li>Established final inspection procedure and matched job specifications.</li>
@@ -206,7 +189,20 @@
                     <li>Sampled products and conducted tests such as Destructive, Visual and Liquid Penetrant Testing to determine their quality.</li>
                   </ul>
                 </div><!--End E4-->
-                <div class="E5"><!--Start E5-->
+
+
+                <button onclick="E5()" class="employment-button-box "><!--Start landing-button-box-->
+                  <div class="employment-button-inside">
+                    <div class="employment-button-text">
+                    <a>Lowes (Department Supervisor - Garden)<span>Jun 2011 to Nov 2013</span></a>
+                    </div>
+                  </div>
+                  <div class="employment-button-panel">
+                    <span class="hop">Lowes</span>   
+                  </div>
+                </button><!--End landing-button-box-->
+
+                <div id="E5"><!--Start E5-->
                   <h2>Responsibilities Included :</h2>
                   <ul class="responsibilities">
                     <li>Provided excellent customer service in the Garden department</li>
@@ -217,7 +213,19 @@
                     <li>Ensured all associate training was up to date and encouraged growth.</li>
                   </ul>
                 </div><!--End E5-->
-                <div class="E6" ><!--Start E6-->
+
+                <button onclick="E6()" class="employment-button-box "><!--Start landing-button-box-->
+                  <div class="employment-button-inside">
+                    <div class="employment-button-text">
+                    <a>Home Depot (Assistant Store Manager)<span>Nov 2004 to Jun 2011</span></a>
+                    </div>
+                  </div>
+                  <div class="employment-button-panel">
+                    <span class="hop">THD</span>   
+                  </div>
+                </button><!--End landing-button-box-->
+
+                <div id="E6" ><!--Start E6-->
                   <h2>Responsibilities Included :</h2>
                   <ul class="responsibilities">
                     <li>Managed all Front End, Back End, Trade and Vault operations</li>
@@ -230,7 +238,8 @@
                     <li>Communicated with other stores to ensure my departments were never out of stock of key merchandise.</li>
                   </ul>      
                 </div><!--End E6-->
-              </div><!--End-employment-content-right-->
+
+              </div><!--End employment-content-left-->
             </div><!--End employment-content-box-->
             </div><!--End emp-content-inside-->
             <div class="emp-content-panel"><!--Start emp-content-panel-->
