--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="employment-content-box"><!--Start employment-content-box-->
               <div class="employment-content-left"><!--Start employment-content-left-->
 
-                <button onclick="E1() " class="employment-button-box " ><!--Start landing-button-box-->
+                <button onclick="employmentChoice('E1')" class="employment-button-box " ><!--Start landing-button-box-->
                   <div class="employment-button-inside">
                     <div class="employment-button-text">
                     <a>USPS (Rural Carrier Assistant) Jan 2018 to Current</a>
@@ -118,7 +118,7 @@
                   </ul>
                 </div><!--EndE1-->
 
-                <button onclick="E2()" class="employment-button-box "><!--Start landing-button-box-->
+                <button onclick="employmentChoice('E2')" class="employment-button-box "><!--Start landing-button-box-->
                   <div class="employment-button-inside">
                     <div class="employment-button-text">
                     <a>Lobbs Horticultural (Horticultural Tech)<span>  Feb 2017 to Jan 2018</span></a>
@@ -140,7 +140,7 @@
                   </ul>
                 </div><!--End E2-->
 
-                <button onclick="E3()" class="employment-button-box "><!--Start landing-button-box-->
+                <button onclick="employmentChoice('E3')" class="employment-button-box "><!--Start landing-button-box-->
                   <div class="employment-button-inside">
                     <div class="employment-button-text">
                     <a>C.M.I. (Dispatch Supervisor)<span>Jan 2015 to Mar 2016</span></a>
@@ -163,7 +163,7 @@
                   </ul>
                 </div><!--End E3-->
 
-                <button onclick="E4()" class="employment-button-box "><!--Start landing-button-box-->
+                <button onclick="employmentChoice('E4')" class="employment-button-box "><!--Start landing-button-box-->
                   <div class="employment-button-inside">
                     <div class="employment-button-text">
                     <a>Friction Stir Link (QC Supervisor)<span>Nov 2013 to Jan 2015 then Mar 2016 to Feb 2017</span></a>
@@ -191,7 +191,7 @@
                 </div><!--End E4-->
 
 
-                <button onclick="E5()" class="employment-button-box "><!--Start landing-button-box-->
+                <button onclick="employmentChoice('E5')" class="employment-button-box "><!--Start landing-button-box-->
                   <div class="employment-button-inside">
                     <div class="employment-button-text">
                     <a>Lowes (Department Supervisor - Garden)<span>Jun 2011 to Nov 2013</span></a>
@@ -214,7 +214,7 @@
                   </ul>
                 </div><!--End E5-->
 
-                <button onclick="E6()" class="employment-button-box "><!--Start landing-button-box-->
+                <button onclick="employmentChoice('E6')" class="employment-button-box "><!--Start landing-button-box-->
                   <div class="employment-button-inside">
                     <div class="employment-button-text">
                     <a>Home Depot (Assistant Store Manager)<span>Nov 2004 to Jun 2011</span></a>
@@ -279,9 +279,9 @@
                 <div class="cert-content-box-in"><!--Start cert-content-box-in-->
                   <div class="cert-content-text-in"><!--Start cert-content-text-in-->
                     <div class="buttons"><!--Startbuttons-->
-                      <button onclick="certSlides()" class="CC">Codecademy</button>
-                      <button onclick="certSlides2()" class="QC">Quality Control</button>
-                      <button onclick="certSlides3()" class="BM">Boilermaker</button>
+                      <button onclick="Slides('mySlides')" class="CC">Codecademy</button>
+                      <button onclick="Slides('mySlides1')" class="QC">Quality Control</button>
+                      <button onclick="Slides('mySlides2')" class="BM">Boilermaker</button>
                     </div><!--End buttons-->
                   </div><!--End cert-contant-text-in-->
                   <div class="cert-content-panel1"><!--Start cert-content-panel-->
@@ -553,7 +553,7 @@
       </div><!--End page-container-->
     <script src="./index.js"></script>
     
-    <script>portSlides()</script>
+    <script>Slides1('mySlides3')</script>
     <script>theClock()</script>
    </body>
  </html>
