--- a/education.html
+++ b/education.html
@@ -13,7 +13,7 @@
 			  <div class="cert-content-box">
 				<div class="cert-content-inside"><!--Start cert-content-inside-->
 					<div class="title">
-						<button id="cert-back"><a href="">Back</a></button>
+						<button id="cert-back"><a href="./index.html">Back</a></button>
 						<div id="cert-title"><h3>Education & Certifications</h3></div>
 					</div>
 <!--//////////////////////////////////////////////////////////////////////////////////////////-->
