--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
 				</div>
 			  	<div class="contact-buttons"><!--Start contact-buttons-->
 					<button class="c-button"><a href="mailto:maddarr@bellsouth.net"><h4>e-mail</h4></a></button>
-					<button class="c-button" ><a href="https://evesunflower.com"><h4>Facebook</h4></a></button>
-					<button class="c-button" ><a href="https://evesunflower.com"><h4>Instagram</h4></a></button>
+					<button class="c-button" ><a href="https://www.facebook.com/Maddarr"><h4>Facebook</h4></a></button>
+					<button class="c-button" ><a href="https://www.instagram.com/a_fat_aussie_abroad"><h4>Instagram</h4></a></button>
 			  	</div><!--End contact-buttons-->
 			  	<div class="contact-about"><!--Start contact-about-->
 					
