--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
   
 				  <div class="port-banner-box"><!--Start port-banner-box-->
 					<div class="port-banner-inside"><!--Start port-banner-inside-->
-					  <button class="port-back"><a href="./index.html">Back</a></button>
+					  <button class="port-back" onclick="window.location.assign('./index.html')" >Back</button>
 					  <div class="port-heading"><h3>Portfolio of coding</h3></div>
 					</div><!--End port-banner-inside-->
 				  </div><!--End port-banner-box-->
